broken layout fixed for mobie

--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -1,6 +1,7 @@
 // styles
 .product {
   position: relative;
+  overflow: hidden;
   &__box {
     padding: 0.5rem;
     margin: 0 1rem 1rem 0;
