--- a/src/components/SimpleSelector/SimpleSelector.module.scss
+++ b/src/components/SimpleSelector/SimpleSelector.module.scss
@@ -3,7 +3,7 @@
   position: relative;
   line-height: 2rem;
   text-transform: uppercase;
-
+  padding: 0 1rem 0 0;
   &__box {
     text-align: left;
     display: table;
